[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pianistpy"
version = "0.0.1"
authors = [
  { name="Barry T. Chiang", email="barrytchiang@gmail.com" },
]
description = "PIANISTpy (Particle Initial conditions with ANISoTropy) for astrophysics and cosmology"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BarryTC/PIANISTpy"
Issues = "https://github.com/BarryTC/PIANISTpy/issues"